# fastapi-with-dynamodb-as-cache

./: README.md  main.py  pyproject.toml
businesslogic/: users.py
core/: settings.py
db/sqlite/: database.db
dependencies/aws/: dynamodb.py
